# FOSSA-GroundStationControlPanel

./: .gitignore  .gitmodules  README.md
Control Panel Source Code/: key.txt
Debugging Arduino Sketches/sysInfo/: sysInfo.ino
Debugging Arduino Sketches/test_serial/: test_serial.ino
Desktop/FOSSA-GroundStationControlPanel/: .gitignore  LICENSE  README.md
Desktop/FOSSA-GroundStationControlPanel/FOSSASatTracker/FOSSASatTracker/libs/gsat-r11/: configure.in
Desktop/FOSSA-GroundStationControlPanel/FOSSASatTracker/FOSSASatTracker/libs/gsat-r11/autom4te.cache/: traces.0
Desktop/FOSSA-GroundStationControlPanel/FOSSASatTracker/FOSSASatTracker/libs/gsat-r11/code_examples/: gSatTEME2_expl.cpp  gSatTEME_expl.cpp
Desktop/FOSSA-GroundStationControlPanel/FOSSASatTracker/FOSSASatTracker/libs/gsat-r11/src/: gTleFileAccessor.hpp
Desktop/FOSSA-GroundStationControlPanel/FOSSASatTracker/FOSSASatTracker/libs/gsat-r11/test/: gMatrix_Test.hpp
Documentation/: Serial Protocol.md
Doppler Compensation Program/: main.cpp
FOSSA-GroundStationControlPanel/: DopplerShiftCorrector.h  FOSSA-GroundStationControlPanel.pro  mainwindow.h  messagelogframe.h  systeminformationpane.ui
FOSSACommsInterpreter/: .gitignore
FOSSACommsInterpreter/src/: Datagram.cpp  Datagram.h  Frame.cpp  Frame.h
FOSSAGS/: FOSSAGS.ino
FOSSAGSCP/: FOSSAGSCP.pro  FOSSAGSCP_en_GB.ts  SerialPortThread.cpp  SerialPortThread.h  Settings.cpp  Settings.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mappane.cpp  mappane.h  mappane.ui  messagelogframe.cpp  messagelogframe.h  messagelogframe.ui  qmlResource.qrc  systeminformationpane.cpp  systeminformationpane.h  systeminformationpane.ui
FOSSAGSCP/include/: CStructs.h  (+11 more)
Release 32-bit/: qmake_qmake_immediate.qrc
docs/: Serial Protocol.md
(+156 files in other folders)
